force-app/main/default/objects/User_Type__c/User_Type__c.object-meta.xml
<CustomObject>
    <label>User Type</label>
    <nameField>
        <label>User Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>