force-app/main/default/objects/User_Type__c/fields/Opportunity_Exhibitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Exhibitor_Type__c</fullName>
    <description>This field is used to store the mapping of Opportunity Exhibitor Paid By and User Type</description>
    <label>Opportunity Exhibitor Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Exhibitor Paid by Agent</fullName>
            </value>
            <value>
                <fullName>Exhibitor Paid by Exhibitor</fullName>
            </value>
            <value>
                <fullName>UK Exhibitor VAT Invoicing</fullName>
            </value>
            <value>
                <fullName>Individual Contract</fullName>
            </value>
            <value>
                <fullName>SubAgent Paid By Subagent</fullName>
            </value>
            <value>
                <fullName>SubAgent Paid By Exhibitor</fullName>
            </value>
            <value>
                <fullName>Co-Exhibitor Paid by Exhibitor</fullName>
            </value>
            <value>
                <fullName>Co-Exhibitor Split Pay</fullName>
            </value>
            <value>
                <fullName>Non-Exhibiting Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>