force-app/main/default/objects/User_Type__c/fields/Related_Opp_Exhibitor_Type__c.field-meta.xml
<CustomField>
    <fullName>Related_Opp_Exhibitor_Type__c</fullName>
    <label>Related Opp Exhibitor Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Co-Exhibitor</fullName>
            </value>
            <value>
                <fullName>Agent Owned Exhibitor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>